README and design changes

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <main>
         <nav>
             <div class="nav-left">
-                <p>hi</p>
+                <p>Hi</p>
             </div>
             <div class="nav-right">
                 <p>Hello</p>
@@ -19,33 +19,40 @@
         </nav>
         <section>
             <div class="section-left">
-                <div>
+                <div class="lefty">
                     <p>Pirmas kairysis</p>
                 </div>
-                <div>
+                <div class="righty">
                     <p>Antras kairysis</p>
                 </div>
-                <div>
+                <div class="lefty">
                     <p>Trecias kairysis</p>
                 </div>
             </div>
             <div class="section-right">
-                <div>
+                <div class="righty">
                     <p>Pirmas desinysis</p>
                 </div>
-                <div>
+                <div class="left-one">
                     <p>Antras desinysis</p>
                 </div>
-                <div>
+                <div class="right-one">
                     <p>Trecias desinysis</p>
                 </div>
-                <div>
+                <div class="lefty">
                     <p>Ketvirtas desinysis</p>
                 </div>
             </div>
+        </section>
+        <section class="bottom-section">
+            <div class="bottom-left">
+                <p>Bottom left</p>
+            </div>
+            <div class="bottom-right">
+                <p>Bottom right</p>
+            </div>
 
         </section>
-
     </main>
 </body>
 </html>
